<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Display">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout  android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="#0099ff">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:id="@+id/text"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/amaranth"
                android:layout_marginRight="40dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"></TextView>

<!--            <ImageView-->
<!--                android:layout_height="75dp"-->
<!--                android:layout_toRightOf="@id/text"-->
<!--                android:layout_marginLeft="50dp"-->
<!--                android:layout_marginTop="57dp"-->
<!--                android:layout_width="80dp"-->
<!--                android:src="@drawable/ic_person_fill">-->

<!--            </ImageView>-->


                    <ImageView
                        android:layout_toRightOf="@id/text"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="54dp"
                            android:background="@drawable/circle"
                            android:contentDescription="@string/todo"
                        android:layout_toEndOf="@id/text">
                        </ImageView>

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="54dp"
                            android:layout_marginLeft="2dp"
                            android:layout_toRightOf="@id/text"
                            android:layout_marginTop="65dp"
                            android:background="@drawable/birds"
                            android:contentDescription="@string/todo"
                            android:layout_marginStart="2dp"
                            android:layout_toEndOf="@id/text">

                        </ImageView>


        </RelativeLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:background="@drawable/ic_wave2">

    </FrameLayout>

</LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/phonenumbered1"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/back"
                android:drawableLeft="@drawable/ic_iconmonstr_phone_1"
                android:hint="@string/phone_number"
                android:drawablePadding="30dp"
                android:paddingLeft="13dp"
                android:paddingRight="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="15sp"
                android:autofillHints=""
                android:inputType="phone"
                android:drawableStart="@drawable/ic_iconmonstr_phone_1"
                android:paddingEnd="0dp"
                android:paddingStart="13dp">
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/passworded2"
                android:layout_height="45dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/back"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:inputType="textVisiblePassword"
                android:paddingLeft="13dp"
                android:hint="@string/password"
                android:paddingRight="0dp"
                android:drawablePadding="30dp"
                android:textSize="15sp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:paddingEnd="0dp">
            </EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="13dp"
                android:id="@+id/signinbtn"
                android:padding="5dp"
                android:background="@drawable/rect"
                android:text="@string/sign_in"
                app:backgroundTint="#0099ff">

            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:gravity="center_horizontal"
                android:id="@+id/forgotpwdtv"
                android:text="@string/forgot_password"
                android:textColor="#2284DA"
                android:textSize="14sp">

            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">


            <View
                android:id="@+id/line"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginRight="5dp"
                android:background="#CACACA"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
            </View>

                <TextView
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="41dp"
                    android:layout_marginRight="5dp"
                    android:layout_toRightOf="@id/line"
                    android:gravity="center"
                    android:textColor="#B5B4B4"
                    android:text="@string/or"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@id/line">
                </TextView>

                <View
                    android:id="@+id/line2"
                    android:layout_toRightOf="@+id/or"
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:background="#CACACA"
                    android:layout_marginTop="50dp"
                    android:layout_toEndOf="@+id/or">
                </View>
            </RelativeLayout>
            </LinearLayout>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    android:layout_height="wrap_content">
            <TextView
                android:id="@+id/newuser"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7sp"
                android:textSize="15sp"
                android:text="@string/new_user"
                android:layout_marginEnd="7sp">
            </TextView>

    <TextView
        android:id="@+id/registertv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/signup"
        android:textColor="#0099ff"
        android:textSize="16sp"
        android:textStyle="bold"></TextView>
</LinearLayout>
</LinearLayout>
</LinearLayout>